--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
 .certificates-list li 
 {
     text-align: center;
-
+    align-self: flex-start;
     padding: 3rem;
     background-color: rgb(29, 29, 29);
     border-radius: 18px;
