--- a/style.css
+++ b/style.css
@@ -568,7 +568,7 @@ background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
     11px 15px 6px rgba(0, 0, 0, 0.04);
   
     background-color: #504f4f11;
-    padding: 2vh 2vw;
+    padding: 2rem 2rem;
     max-width: 30%;
     min-width: 25rem;
     height: auto;
@@ -612,6 +612,100 @@ background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
 }
 
 
+.projects-container
+{
+    padding: 4rem;
+    font-size: 1.4rem;
+}
+
+
+.projects-content
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 35rem;
+}
+
+.project-item
+{
+
+    flex-shrink: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    gap: 7rem;
+}
+
+.project-images
+{
+   
+    
+
+    max-width: 584px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+
+}
+
+.first-project
+{
+    order: 1;
+}
+
+
+.project-item img
+
+{
+
+
+    margin-left: 0.5rem;
+
+    max-width: 60%;
+    min-width: 20rem;
+    border-radius: 5px;
+}
+
+
+.project-name
+{
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+    letter-spacing: 0.4rem;
+    background-color: #5c5e6311;
+    padding: 1rem;
+    border-radius: 10px;
+}
+
+.project-description
+{
+    line-height: 2rem;
+    font-size: 1.7rem;
+}
+
+
+.project-info
+{
+    max-width: 40rem;
+}
+
+.project-link
+{
+    width: 50%;
+    text-align: center;
+}
+
+
+
+
 
 @media only screen and (max-width: 1300px) {
 
@@ -633,9 +727,6 @@ background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
 
 
 
-
-
-  
 @media only screen and (max-width: 1000px) {
 
 
@@ -727,13 +818,36 @@ background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
         align-self: center;
         grid-column: 1 / 2;
         grid-row: 4 /5;
+        
 
     } 
+
+
+    .project-item
+    {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+    .project-item img
+    {
+
+
+        min-width: 10rem;
+    }
+
+    .project-info
+    {
+    max-width: 80%;
+    }
 
     .page-footer
     {
         font-size: 1.5rem;
     }
+
+
+
 
 }
 
